<resources>
    <string name="app_name">Assessment</string>
    <string name="btn_sum">btn_sum</string>
    <string name="btn_add">btn_add</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sumbit">Sumbit</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="open_doc"><u>Open Doc!</u></string>
</resources>